# carbontray

./: .gitignore  README.md  carbontray.nix  default.nix  flake.nix  meson.build  shell.nix
.github/workflows/: build.yml  update-flake-inputs.yml
lib/: README.md  libcarbontray.nix  meson.build
lib/include/: meson.build
lib/src/: meson.build
src/: carbontray.c  meson.build
